Bug #2077 Japanese characters in enum/default values are reported incorrectly